@@ -5,6 +5,7 @@
 - added: `F.cluster.https()`
 
 - updated: `F.worker2()` returns entire `stdout` buffer in the `callback(err, buffer)`
+- updated: `$options()` by adding `disabled` key
 
 - fixed: system routing
 - fixed: NoSQL sorting, solved a strange problem
